# faust-web-au-kit

./: .gitignore  CMakeLists.txt  README.md  fwak.workspace.json  package-lock.json  package.json  playwright.config.mjs  project.json  tsconfig.base.json  tsconfig.check.json
apps/atlas-curve/: project.json
apps/atlas-curve/dsp/: main.dsp  main.dsp.json
apps/contour-forge/: project.json
apps/contour-forge/dsp/: main.dsp  main.dsp.json
apps/ember-drive/: project.json
apps/ember-drive/dsp/: main.dsp  main.dsp.json
apps/fet-76/: project.json
apps/fet-76/dsp/: main.dsp
apps/headroom/: project.json
apps/headroom/dsp/: main.dsp  main.dsp.json
apps/latch-line/: project.json
apps/latch-line/dsp/: main.dsp  main.dsp.json
apps/limiter-lab/: project.json
apps/limiter-lab/dsp/: main.dsp  main.dsp.json
apps/mirror-field/: project.json
apps/mirror-field/dsp/: main.dsp  main.dsp.json
apps/omniplugin/: project.json
apps/omniplugin/dsp/: main.dsp
apps/pocket-cut/: project.json
apps/pocket-cut/dsp/: main.dsp  main.dsp.json
apps/press-deck/: project.json
apps/press-deck/dsp/: main.dsp  main.dsp.json
apps/pulse-pad/: project.json
apps/pulse-pad/dsp/: main.dsp  main.dsp.json
apps/relay-tape/: project.json
apps/relay-tape/dsp/: main.dsp  main.dsp.json
apps/room-bloom/: project.json
apps/room-bloom/dsp/: main.dsp  main.dsp.json
apps/seed-tone/: project.json
apps/seed-tone/dsp/: main.dsp  main.dsp.json
apps/silk-guard/: project.json
apps/silk-guard/dsp/: main.dsp  main.dsp.json
apps/span-pair/: project.json
apps/span-pair/dsp/: main.dsp  main.dsp.json
apps/split-stack/: project.json
apps/split-stack/dsp/: main.dsp  main.dsp.json
docs/: au-dsp-engagement-strategy.md  au-remainder-primitive-harvest.md  cabinet-primitive-captures.md  feasibility.md  fet-76-primitive-fitting.md  framework-architecture-self-audit.md  northline-suite-handoff.md  northline-suite-research.md  pdf-ui-overhaul-pass.md  reference-corpus-methodology.md  sonic-profiling-harness.md  sonic-stage-harness.md  soundtoys-primitive-harvest.md  uad-emulation-pilot-results.md  uadx-primitive-exhaustion.md
faust/: limiter_lab.dsp  pulse_pad.dsp
framework/primitives/: audio-primitives.json
framework/profiling/: probe-signals.json
framework/reference-corpus/: plugin-references.json  reference-assemblages.json  uad-plugin-manuals.json
preview/: app.js  index.html  styles.css
preview/lib/: bootstrap.js  control-panels.js  control-store.js  dom.js  formatting.js  meters.js  preview-data.js  renderers.js  schema-ui.js  simulator-id.js  simulators.js  surfaces.js  theme.js  value-scale.js
preview/lib/surfaces/: detail.js  graph-and-meter.js  index.js  registry.js  shared.js
projects/: pulse_pad.json
resources/: Info.plist.in
scripts/: build-au.sh  build-native.sh  doctor-au.sh  install-local.sh  install-suite-local.sh  package-installer.sh  package-suite-installer.sh  package-suite-uninstaller.sh  package-uninstaller.sh  uninstall-local.sh  uninstall-suite-local.sh  validate-au.sh
scripts/lib/: bundles.zsh  lock.zsh  packages.zsh  runtime.zsh
src/: bench_native.cpp  cplug_config.h  plugin_core.c  plugin_core.h  plugin_gui.m  profile_au_host.m  sonic_native.cpp  stage_au_gui_host.m
src/core/: plugin_metering.c  plugin_metering.h  plugin_parameters.c  plugin_parameters.h
src/gui/: plugin_analyzer_view.h  plugin_analyzer_view.m  plugin_gui_shared.h  plugin_gui_shared.m
tests/contracts/: app-schema-cases.mjs  sonic-stages.test.mjs  ui-schema.test.mjs
tests/integration/: export-targets.test.mjs  sonic-stages.test.mjs  workbench-installer.test.mjs
tests/native/: README.md
tests/playwright/: preview.spec.mjs
tests/support/: generated-projects.mjs
tests/unit/: au-headless-guard.test.mjs  au-plugin-profiler-tools.test.mjs  emulation-assembler-tools.test.mjs  faust-profiling-tools.test.mjs  fs-tools.test.mjs  primitive-library-tools.test.mjs  probe-signal-tools.test.mjs  sonic-analysis-tools.test.mjs  sonic-stage-tools.test.mjs  soundtoys-plugin-profiler-tools.test.mjs  surfaces.test.mjs  type-coverage.test.mjs  uad-plugin-profiler-tools.test.mjs
tools/: build-workbench-installer.mjs  check-au-dsp-engagement.mjs  check-framework-structure.mjs  check-type-coverage.mjs  export-targets.mjs  export-workspace.mjs  generate-probe-signals.mjs  list-suite-runtimes.mjs  prepare-test-artifacts.mjs  preview-server.mjs  print-runtime-env.mjs  profile-au-plugins.mjs  profile-faust-assemblage.mjs  profile-soundtoys-plugins.mjs  profile-uad-plugins.mjs  run-benchmarks.mjs  run-emulation-pilots.mjs  run-native-validation.mjs  run-sonic-stages.mjs  stage-au-plugin.mjs  type-coverage-policy.json
tools/lib/: au-plugin-profiler-tools.mjs  benchmark-harness.mjs  emulation-assembler-tools.mjs  export-faust-tools.mjs  export-manifest-tools.mjs  export-process-tools.mjs  export-staging-tools.mjs  faust-profiling-tools.mjs  fs-tools.mjs  primitive-library-tools.mjs  probe-signal-tools.mjs  project-tools.mjs  reference-corpus-tools.mjs  sonic-analysis-tools.mjs  sonic-stage-tools.mjs  soundtoys-plugin-profiler-tools.mjs  uad-plugin-profiler-tools.mjs  ui-family-tools.mjs
types/: framework.d.ts
ui/catalog/: framework-studio.json  northline-suite.json
ui/families/northline-core/: manifest.json
